--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
+    "got": "^9.6.0",
     "next": "^13.4.9",
     "react": "^18.2.0",
     "react-dom": "18.2.0"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/got": "^9.6.12",
     "@types/node": "20.4.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
